--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,16 @@
 <head>
 <title>Cranberry Jam</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-<link rel="stylesheet" type="text/css" href="stylesheets/simple.css" media="screen">
+ <meta name="viewport" content="width=device-width">
 
-<script LANGUAGE="javascript" SRC="javascripts/mootools-core-1.4.5-full-nocompat.js"></script> 
-<script LANGUAGE="javascript" SRC="javascripts/cjmoo.js" type="text/javascript"></script> 
+<link rel="stylesheet" type="text/css" href="stylesheets/simple.css" media="screen">
+<link rel="stylesheet" type="text/css" href="stylesheets/play.css" media="screen">
+
+
+<script LANGUAGE="javascript" SRC="javascripts/mootools-core-1.4.5-full-nocompat.js">
+</script> 
+<SCRIPT LANGUAGE="javascript" SRC="javascripts/cjmoo.js" type="text/javascript">
+</SCRIPT> 
 <script src="http://code.jquery.com/jquery-latest.min.js"></script>
 
 <script>
@@ -15,6 +21,7 @@ function loadPart(part) {
  $("#container").load(url);
  $("#page").text(name);
 }
+
 </script>
 
 
@@ -24,7 +31,7 @@ function loadPart(part) {
 
 <div id="main">
 <div id="banner">
-<img src="images/banner.jpg"/>
+<img class="banner" src="images/banner.jpg"/>
 <span style="float:right;"><br>Now on Raspberry Pi &nbsp;&nbsp;&nbsp;</span>
 </div>
 
@@ -103,6 +110,14 @@ function loadPart(part) {
 <div id="page">
 Home
 </div>
+<div class="container">
+<div id="slides">
+    <img src="images/slideshow_1.jpg">
+    <img src="images/slideshow_2.jpg">
+    <img src="images/slideshow_3.jpg">
+    <img src="images/slideshow_4.jpg">
+</div>
+</div>
 <div id="container">
 <div id="boxes">
 <fieldset class="notice">
@@ -141,6 +156,22 @@ infiltrates your soul!<br>
 
 </div>
 </div>
+
+<script src="javascripts/jquery.slides.min.js"></script>
+<script>
+$(function(){
+      $("#slides").slidesjs({
+        width: 962,
+        height: 300,
+ 	play: {
+          active: true,
+          auto: true,
+          interval: 4000,
+          swap: true
+        }
+      });
+    });
+</script>
 
 </body>
 </html>
